# ticket94-FastAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: github_ci.yml
alembic/: env.py
alembic/versions/: 2024_05_16_0041-77d9d82648ee_add_users_table.py  2025_06_12_1343-535ee6749e6c_create_events_related_table.py  2025_06_13_1745-b5bc335f7a8e_create_seat_related_tables.py  2025_06_13_1803-a81055d52ee9_create_seat_related_tables.py  2025_06_24_1726-7a1493d5d425_add_sold_to_seatstatus.py  2025_06_24_1749-98b43c6a0e0b_remove_sqlenum.py
ansible/: deploy_dev.yml  deploy_prod.yml  inventory_dev.yml  inventory_prod.yml
env/: .env  .env.db  .env.remote
env.example/: .env.db.example  .env.example
scripts/: start.sh
src/: config.py  constants.py  database.py  decorator.py  main.py  models.py  schedule.py  schemas.py  sms.py
src/amego/: dependencies.py  invoice.py  schemas.py
src/auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
src/event/: router.py  schemas.py  service.py
src/mitake_sms/: dependencies.py  service.py
src/mypay/: dependencies.py  service.py
src/order/: router.py  schemas.py  service.py
src/seat_init/: router.py  schemas.py  service.py
src/seat_maintenance/: router.py  service.py
src/seat_management/: router.py  schemas.py  service.py
src/tappay/: schemas.py  service.py
terraform/environments/dev/: terraform.tfvars.example
terraform/gcp_compute_engine/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/gcp_db_bucket_repository/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
terraform/gcp_vm_deploy/: README.md  main.tf  variables.tf
terraform/serverless_deploy/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/ssh_key_docker_deploy/: README.md  main.tf  terraform.tfvars.example  variables.tf
terraform/ssh_password_docker_deploy/: README.md  main.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_api.py
